--- a/JanperWebsite/JanperWebsite.csproj
+++ b/JanperWebsite/JanperWebsite.csproj
@@ -779,6 +779,8 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="Download\JANPER Duraform_P1_V4.pdf" />
+    <Content Include="Download\JANPER Duraform_P2_V4.pdf" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
@@ -876,7 +878,6 @@
     <Content Include="Download\A4 Brochure_DuraForm Brochure_0618_ALTS_V1.pdf" />
     <Content Include="Content\sass\_partial\_contact.scss" />
     <Content Include="Content\sass\_partial\_Gallery.scss" />
-    <Content Include="Download\Duraform Doors Order Form.pdf" />
     <Content Include="Download\Flat Pack Order Form.pdf" />
     <Content Include="Download\JanperEdge Order Form.pdf" />
     <Content Include="Download\Maintenance  Installation.pdf" />
