Add reception email

--- a/JanperWebsite/Web.config
+++ b/JanperWebsite/Web.config
@@ -11,6 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="hostName" value="safecode-com-au.mail.protection.outlook.com" />
     <add key="infoMail" value="no-reply.janper@safecode.com.au" />
+    <add key="ReceptionEmail" value="reception@janper.com.au" />
     <add key="templateConfirmation" value="~\Templates\EnquiryConfirmation.html" />
     <add key="templateNotification" value="~\Templates\EnquiryNotification.html" />
     <add key="sampleRequestConfirmation" value="~\Templates\SampleRequestConfirmation.html" />
